# jav-lib-manager

./: .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  README_zh.md  SECURITY.md  pyproject.toml  requirements.txt  run_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-app.yml
data/: actress_data.json
docs/: index.md
src/: __init__.py  main.py
src/core/: avatar_downloader.py  cover_downloader.py  database.py  javdb_scraper.py  models.py  parser.py  scanner.py  scraper.py
src/gui/: main_window.py
src/gui/dialogs/: __init__.py  actress_dialog.py  settings_dialog.py
src/gui/themes/: __init__.py  theme_manager.py
src/utils/: config.py  logger.py
tests/: __init__.py  conftest.py  test_cover_handling.py  test_parser.py  test_release_date.py  test_scanner.py  test_scraper.py
